<resources>
    <string name="app_name">QuickLib</string>
    <string name="title_activity_main">QuickLib</string>
    <string name="new_book_shelf_name">insert here the name for your new BookShelf</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="add_book_title">Book Title</string>
    <string name="add_book_isbn">ISBN</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_publisher_date">Publisher Date</string>
    <string name="add_book_publisher_place">Publisher Place</string>
    <string name="add_book_pages">Number of Pages</string>
    <string name="add_book_button">Add Book</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="prompt_password">Password Prompt</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>
    <string name="results"><u>Results:</u></string>
    <string name="username">Username:</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="adress">Adress:</string>
    <string name="place_of_residence">Place of Residence:</string>
    <string name="post_code">Post Code:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="update_your_user">Update your User</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_no_isbn">Barcode is no ISBN</string>
    <string name="no_internet_connection">there is no internet connection</string>

    <!-- Navgation Drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="scanner">Scanner</string>
    <string name="add_a_book">Add a Book</string>
    <string name="search_isbn">Search ISBN</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Fab-Menu -->
    <string name="close_fab_menu">close menu</string>
    <string name="fab_add_book">add book</string>
    <string name="fab_scan_book">scan book-barcode</string>
    <string name="fab_search_isbn">search with ISBN</string>

    <!-- Recycler View -->
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>

    <string name="title_text">Title:</string>
    <string name="isbn_text">ISBN:</string>
    <string name="author_text">Author:</string>
    <string name="publisher_text">Publisher:</string>
    <string name="publisher_date_text">Date of Publication:</string>
    <string name="publisher_place_text">Place of Publication:</string>
    <string name="page_text">\u2116 of Pages:</string>
    <string name="search_isbn_button">Search ISBN</string>
    <string name="hint_review">Enter your review</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add your Review</string>
    <string name="reviewBtn">Add your Review</string>
    <string name="reviewText">Enter your review</string>
    <string name="addReviewBtn">Add your Review</string>
    <string name="numberReviews">Number Reviews</string>

    <!-- settings & Signup-->
    <string name="enter_email_address">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="authentication_failed">Authentication failed. </string>
    <string name="email_address_is_updated">Email address is updated. Please sign in with new email id!</string>
    <string name="failed_to_update_email">Failed to update email!</string>
    <string name="password_is_updated">Password is updated, sign in with new password!</string>
    <string name="failed_to_update_password">Failed to update password!</string>
    <string name="reset_password_email_is_sent">Reset password email is sent!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
    <string name="enter_email">Enter email</string>
    <string name="profile_is_deleted">Your profile is deleted :-( Create a account now!</string>
    <string name="failed_to_delete_your_account">Failed to delete your account!</string>
</resources>
