<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/toolbar_size"
    tools:context="com.example.ro_en.quicklib.DisplayBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/diplayBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/add_book_title" />

        <TextView
            android:id="@+id/displayBookIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:hint="@string/add_book_isbn" />

        <TextView
            android:id="@+id/diplayBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/add_book_author" />

        <TextView
            android:id="@+id/displayBookPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/add_book_publisher" />

        <TextView
            android:id="@+id/diplayBookPublisherPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/add_book_publisher_place" />

        <TextView
            android:id="@+id/displayBookPublisherDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/add_book_publisher_date" />

        <TextView
            android:id="@+id/displayBookPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:hint="@string/add_book_pages"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
