<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/toolbar_size"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ro_en.quicklib.AddBookActivity"
    tools:showIn="@layout/activity_add_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/addBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_book_title" />

        <EditText
            android:id="@+id/addBookIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_book_isbn"
            android:inputType="number" />

        <EditText
            android:id="@+id/addBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_book_author" />

        <EditText
            android:id="@+id/addBookPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_book_publisher" />

        <EditText
            android:id="@+id/addBookPublisherPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_book_publisher_place" />

        <EditText
            android:id="@+id/addBookPublisherDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_book_publisher_date" />

        <EditText
            android:id="@+id/addBookPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_book_pages"
            android:inputType="number" />


        <TextView
            android:id="@+id/addBookListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center_horizontal|center_vertical"
            android:visibility="invisible"
            android:text="TextView" />

        <Button
            android:id="@+id/addBookButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book_button" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
