<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ro_en.quicklib.SearchIsbn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="@dimen/toolbar_size"
        android:orientation="vertical">

        <EditText
            android:id="@+id/result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/search_isbn"
            android:inputType="number"
            android:textSize="22sp" />

        <Button
            android:id="@+id/scan_barcode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryColor"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/search_isbn_button"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/results"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/result_BookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_title"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_Isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_isbn"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_BookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_author"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_BookPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_publisher"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_BookPublisherPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_publisher_place"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_BookPublisherDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_publisher_date"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_BookPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_book_pages"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/result_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal|center_vertical"/>

        <Button
            android:id="@+id/addBookButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book_button" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
